--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.4",
     "@nextui-org/react": "^2.2.9",
+    "@react-spring/parallax": "^9.7.3",
     "@supabase/supabase-js": "^2.39.3",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.18.0",
+    "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-grid-gallery": "^1.0.1",
     "react-hot-toast": "^2.4.1",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.1",
+    "styled-components": "^6.1.9",
+    "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
